--- a/notebooks/Looker.ipynb
+++ b/notebooks/Looker.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "![image-14.png](attachment:image-14.png)\n",
     "\n",
-    "# 3 Create Calculated Fielda\n",
+    "# 3 Create Calculated Field\n",
     "\n",
     "1. In the bottom right corner, select the **Add a field** option.\n",
     "\n",
